// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> with \`big\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--regular k-Form-TextInput--big"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`center\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--regular k-Form-TextInput--alignCenter"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`digits\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInput-hasDigits k-Form-TextInput-hasDigits_12 k-Form-TextInput--andromeda k-Form-TextInput--regular"
  disabled={false}
  name="text"
  style={
    Object {
      "--input-content-width": 12,
    }
  }
/>
`;

exports[`<TextInput /> with \`disabled\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--disabled k-Form-TextInput--regular"
  disabled={true}
  name="text"
/>
`;

exports[`<TextInput /> with \`error\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--error k-Form-TextInput--regular"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`giant\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--regular k-Form-TextInput--giant"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`huge\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--regular k-Form-TextInput--huge"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`name\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--regular"
  disabled={false}
  name="foobar"
/>
`;

exports[`<TextInput /> with \`regular\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--regular"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`tag\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--regular"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`textarea\` tag matches with snapshot 1`] = `
<div
  className="sc-bwzfXH bEnvnC k-Form-TextInput__textareaContainer k-Form-TextInput__textareaContainer--andromeda"
>
  <textarea
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInput--andromeda"
    disabled={false}
    name="message"
  />
  <div
    className="k-Form-TextInput__textareaGradient"
  />
</div>
`;

exports[`<TextInput /> with \`tiny\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--tiny k-Form-TextInput--regular"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`valid\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--valid k-Form-TextInput--regular"
  disabled={false}
  name="text"
/>
`;
